@@ -1,0 +1,6 @@
+#value_indexed
+#unconditional
+SK_DIAG_BPF_STORAGE_NONE	0
+SK_DIAG_BPF_STORAGE_PAD		1
+SK_DIAG_BPF_STORAGE_MAP_ID	2
+SK_DIAG_BPF_STORAGE_MAP_VALUE	3
